# MAI_IR

./: CMakeLists.txt  README.md  build_index.py  config.yaml  crawl.py  requirements.txt  search.py
reports/lab1/src/: src.tex  thinks.tex
reports/lab2/src/: literature.tex  src.tex  thinks.tex  titlepage.tex
reports/lab3/: main.tex
reports/lab3/src/: literature.tex  problem.tex  src.tex  thinks.tex
reports/lab4/src/: problem.tex  src.tex  thinks.tex  titlepage.tex
src/: index.cpp  stemming.cpp  tokenize.cpp  zipf.cpp
